# Website

./: README.md  angular.json  firebase.json  karma.conf.js  package-lock.json  package.json
src/: index.html
src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
src/app/auth/forgot-password/: forgot-password.component.html  forgot-password.component.ts
src/app/auth/login/: login.component.html  login.component.ts
src/app/auth/register/: register.component.html  register.component.ts
src/app/auth/verify-email/: verify-email.component.html  verify-email.component.ts
src/app/pages/available-vpn/: available-vpn.component.css  available-vpn.component.html  available-vpn.component.spec.ts  available-vpn.component.ts
src/app/pages/edit-account/: edit-account.component.html  edit-account.component.spec.ts  edit-account.component.ts
src/app/pages/home/: home.component.css  home.component.html  home.component.ts
src/app/pages/profil-managment/: profil-managment.component.css  profil-managment.component.html  profil-managment.component.spec.ts  profil-managment.component.ts
src/app/pages/tutorial/: tutorial.component.html
src/app/service/auth/: auth.service.ts
src/environments/: environment.prod.ts  environment.ts
src/wasm/: Cargo.toml
